--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -12,7 +12,7 @@
   color: white;
 }
 
-.hero {
+/*.hero {
   background: url('hero.jpeg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -20,7 +20,7 @@
   background-size: cover;
   height:370px;
   box-shadow: 0px 3px 8px #2a2a2a;
-}
+}*/
 
 h1, h2, h3, h4, h5, h6, .navbar {
   margin:0;
@@ -49,7 +49,11 @@ h1, h2, h3, h4, h5, h6, .navbar {
 }
 
 body {
-  background: url('bg.png');
+  background: url('bg.jpeg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif;
   color: #949A9C;
 }
