Hooked up next lesson button

--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,8 +1,10 @@
 <script>
-      $('.new-lesson-button').click(function( event ) {
+  $(function()  {
+
+    $('.new-lesson-button').click(function( event ) {
       var lessonUrl = $( event.target).data('lesson-url');
       $('#newLessonForm').attr('action', lessonUrl);
-   });
+    });
 
     $('.lessons').sortable({
       update: function( event, ui) {
